# pi_2

./: Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
backend/: app.py  conexao.py  models.py  schemas.py  settings.py  teste.py
migrations/: env.py
migrations/versions/: 1e8fd6954e69_insert_da_tabela_usuario.py  78cfd388ec78_inicial.py  91db0833c3ad_ajuste.py  a44d7f17f8ce_insert_da_tabela_usuario.py  de47d70e656e_correcao.py  e85c18902bc4_insert_da_tabela_usuario.py
static/: styles.css
templates/: base.html  bottombar.html  cadastrar_loja.html  cadastrar_usuario.html  entrar.html  index.html  lojas.html  navbar.html  roteiro.html
tests/: conftest.py  test_db.py
