[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Igor Esposito <sposigor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
passlib = "^1.7.4"
alembic = "^1.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
python-jose = "^3.3.0"
blue = "^0.9.1"
isort = "^5.12.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
starlette = "0.27"
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.0.289"
httpx = "^0.25.0"
isort = "^5.12.0"

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn backend.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=backend -vv'
post_test = 'coverage html'

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.blue]
extend-exclude = '(migrations/)'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
